# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  OpenGL  config.xml
include/: Config.h
include/core/: Color.h  Mesh.h  Program.h  Shader.h  Vertex.h
include/glad/: glad.h
include/utility/: AppStruct.h  color.h  iconLoader.h  loadConfig.h
include/utils/: Logger.h
src/: Application.cpp  glad.c  main.cpp  tinyxml2.cpp
src/app/: glad.c  main.cpp
src/assets/shader/default/: defaultFrag.frag  defaultVert.vert
src/core/: Color.cpp  Mesh.cpp  Program.cpp  Shader.cpp  Vertex.cpp
src/utility/: iconLoader.cpp  loadConfig.cpp
src/utils/: Logger.cpp
